--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,41 @@
+appdirs==1.4.4
 asgiref==3.2.10
+astroid==2.4.2
+backcall==0.2.0
+colorama==0.4.4
+decorator==4.4.2
+distlib==0.3.1
 Django==3.1.6
+django-crispy-forms==1.11.1
+filelock==3.0.12
 gunicorn==20.0.4
+ipykernel==5.4.3
+ipython==7.19.0
+ipython-genutils==0.2.0
+isort==5.6.4
+jedi==0.18.0
+jupyter-client==6.1.11
+jupyter-core==4.7.0
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+mysqlclient==2.0.3
+parso==0.8.1
+pickleshare==0.7.5
 Pillow==8.1.0
+prompt-toolkit==3.0.14
+Pygments==2.7.4
+pylint==2.6.0
+python-dateutil==2.8.1
+pytz==2020.1
+pywin32==300
+pyzmq==22.0.0
+six==1.15.0
 sqlparse==0.4.1
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
+virtualenv==20.4.0
+virtualenvwrapper-win==1.2.6
+wcwidth==0.2.5
 whitenoise==5.2.0
-
+wrapt==1.12.1
